
syntax = "proto3";
package app;

service OrderService {
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    rpc CreateOrder (CreateOrderRequest) returns (Empty);
}

message Order {
  string id = 1;
  string address = 2;
  int32 price = 3;
}

message CreateOrder{
    string address = 2;
    int32 price = 3;
}
message Empty {}

message GetOrderRequest {
   string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message CreateOrderRequest {
   CreateOrder create_order = 1;
}

